Implement in-memory Lesson and Grade functionality. Closes #47